Suggestions for chatbots

--- a/templates/chatbot_seq2seq_ubuntu.html
+++ b/templates/chatbot_seq2seq_ubuntu.html
@@ -53,6 +53,14 @@
             </div>
             <div class="col-md-1"></div>
       </div>
+    <div class="row" id="suggestions_row">
+
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="row" id="suggestions"></div>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
     </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script  src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
